<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dynamics"
            android:icon="@drawable/ic_menu_dynamics"
            android:title="@string/menu_dynamics" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_errors"
            android:icon="@drawable/ic_menu_errors"
            android:title="@string/menu_errors" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>