<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.obd_servise.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_homeFragment_to_deviceSelectionFragment"
        app:destination="@id/deviceSelectionFragment" />
       </fragment>
    <fragment
        android:id="@+id/nav_dynamics"
        android:name="com.example.obd_servise.ui.dynamics.DynamicsFragment"
        android:label="@string/menu_dynamics"
        tools:layout="@layout/fragment_dynamics" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.obd_servise.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_errors"
        android:name="com.example.obd_servise.ui.errors.ErrorsFragment"
        android:label="@string/menu_errors"
        tools:layout="@layout/fragment_errors" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.obd_servise.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.obd_servise.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/deviceSelectionFragment"
        android:name="com.example.obd_servise.ui.deviceSelection.DeviceSelectionFragment"
        android:label="fragment_device_selection"
        tools:layout="@layout/fragment_device_selection" />
</navigation>