<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment"
    android:background="?attr/colorPrimaryVariant">

    <!-- Контейнер для статистики -->
    <GridLayout
        android:id="@+id/stats_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:columnCount="3"
        android:rowCount="2">


        <!-- Карточки -->
        <include
            layout="@layout/item_stat_block1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="2dp"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_columnWeight="1" />

        <include
            layout="@layout/item_stat_block2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnSpan="1"
            android:layout_margin="2dp"
            android:layout_rowSpan="1"
            android:layout_columnWeight="1" />

        <include
            layout="@layout/item_stat_block3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnSpan="1"
            android:layout_margin="2dp"
            android:layout_rowSpan="1"
            android:layout_columnWeight="1" />

        <include
            layout="@layout/item_stat_block4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnSpan="1"
            android:layout_margin="2dp"
            android:layout_rowSpan="1"
            android:layout_columnWeight="1" />

        <include
            layout="@layout/item_stat_block5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_margin="2dp"
            android:layout_columnWeight="1" />

        <include
            layout="@layout/item_stat_block6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:layout_margin="2dp"
            android:layout_columnWeight="1" />

    </GridLayout>

    <!-- Горизонтальный скролл для фильтров -->
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="3dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_grid">

        <RadioGroup
            android:id="@+id/filter_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <RadioButton
                android:id="@+id/radio_all_time"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_all"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_7_days"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_7_days"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_14_days"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_14_days"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_30_days"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_30_days"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_90_days"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_90_days"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radio_360_days"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/btn2_ne_selected"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rad_360_days"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RadioGroup>
    </HorizontalScrollView>


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stats_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            app:layout_constraintBottom_toTopOf="@+id/buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_my_trips"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:text="Мои поездки"
            android:textColor="@color/white"
            android:background="@drawable/btn2_ne_selected"
            app:backgroundTint="?attr/colorPrimary" />

        <Button
            android:id="@+id/btn_add_trip"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:text="Добавить поездку"
            android:textColor="@color/black"
            android:background="@drawable/btn1"
            app:backgroundTint="?attr/colorPrimary"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <!--    android:textColor="?attr/colorPrimary"-->
</androidx.constraintlayout.widget.ConstraintLayout>
